--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
     <h1>Register for the Event</h1>
     <form action="#" method="post">
         <label for="name">Full Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" required><br>
 
         <label for="email">Email Address:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required><br>
 
         <label for="phone">Phone Number:</label>
-        <input type="tel" id="phone" name="phone" required>
-
+        <input type="tel" id="phone" name="phone" required><br>
         <label for="event">Event:</label>
-        <input type="text" id="event" name="event" required>
+        <input type="text" id="event" name="event" required><br>
 
-        <button type="submit">Register</button>
+        <button type="submit">Register</button><br>
     </form>
 </body>
 </html>
